<resources>
    <string name="app_name">Android Against Humanity</string>

    <string name="create_join_action">Create or Join</string>
    <string name="nickname_action">Nickname</string>

    <string name="conversation_list_no_content">No conversation :(</string>

    <string name="conversation_no_message">Be the first to post!</string>

    <string name="modal_nickname_title">Enter your nickname:</string>
    <string name="modal_nickname_hint">The man</string>
    <string name="modal_save">Save</string>
    <string name="modal_nickname_random">No time for this shit</string>
    <string name="modal_nickname_confirmation">Your nickname is %1$s</string>

    <string name="modal_join_conversation_title">Type the name of the crew you wanna join:</string>
    <string name="modal_join_conversation_hint">Oh boy.</string>
    <string name="modal_join_conversation_join">Join</string>
    <string name="modal_join_conversation_create">Let\'s start a new war</string>

    <string name="from_who">From %1$s</string>
    <string name="from_me">The Dude</string>

    <string name="unhandled_error">The guy who built this app was too lazy to handle this error. Try again, should work next time.</string>
</resources>
