<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:background="@color/colorPrimary"
    style="@style/MatchParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_gravity="center"
        style="@style/WrapContent.Vertical"
        >

        <TextView
            android:text="@string/modal_nickname_title"
            style="@style/WrapContent"
            />

        <EditText
            android:id="@+id/modal_nickname_edittext"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/modal_nickname_submit"
            android:text="@string/modal_save"
            style="@style/WrapContent"
            />

        <Button
            android:id="@+id/modal_nickname_random"
            android:text="@string/modal_nickname_random"
            style="@style/WrapContent"
            />

    </LinearLayout>

</FrameLayout>